fixed small typos + right pdf version

--- a/exam/correction/GPR_exam_solutions_2016_2017.tex
+++ b/exam/correction/GPR_exam_solutions_2016_2017.tex
@@ -31,13 +31,13 @@
 \subsection*{Exercise 1 : The Morris method} 
 
 \paragraph{}
-For the graph \emph{A}, the location of $X2$ indicates that this variable has no influence at all ton the function: as a consequence, this must corresonds to $f_4$.
+For the graph \emph{A}, the location of $X2$ indicates that this variable has no influence at all on the function: as a consequence, this must correspond to $f_4$.
 
 \paragraph{}
-The graph $C$ is associated to a function such that $X2$ has a purely linear influence but $x1$ has a more complex behaviour. Therefore, this graph is the one of $f_5$
+The graph $C$ is associated to a function such that $X2$ has a purely linear influence but $X1$ has a more complex behaviour. Therefore, this graph is the one of $f_5$
 
 \paragraph{}
-The graphs $B$ and $C$ show a similar pattern where both variables has a non-linear influence on the output. They must thus correspond to $f_1$ and $f_2$. It can be notices that $f_1$ is a symmetric function and that the two points in $D$ are on top of each others. As a consequence, these two are associated one with each other.
+The graphs $B$ and $Db$ show a similar pattern where both variables has a non-linear influence on the output. They must thus correspond to $f_1$ and $f_2$. It can be notices that $f_1$ is a symmetric function and that the two points in $D$ are on top of each others. As a consequence, these two are associated one with each other.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -162,7 +162,7 @@ Note the default value of 1 for the parameter $s2$, which allows to call the fun
 &= \E[Z_0(x)] + \E[Z_1(x)] + \E[Z_2(x)] + \E[Z_3(x)] \\
 &= 0 = \E[Z(x)]\\
 \cov [Z_s(x),Z_s(y)] &= \cov [ Z_0(x) + Z_1(x) + Z_2(x) + Z_3(x) , Z_0(y) + Z_1(y) + Z_2(y) + Z_3(y)]\\
-&= \cov [Z_0(x),Z_0(y)] + \dots + \cov [Z_3(x),Z_3(y)] \text{\qquad (by independance)}\\
+&= \cov [Z_0(x),Z_0(y)] + \dots + \cov [Z_3(x),Z_3(y)] \text{\qquad (by independence)}\\
 &= k(x,y)
 \end{align*}
 Typical examples of sample path are shown bellow:
